[TASK] Add basic css (background, shadows)

--- a/index.html
+++ b/index.html
@@ -9,17 +9,35 @@
   </head>
   <body>
     <div class="row">
-      <div class="small-12 medium-12 large-8 large-push-2 column">
-        Logo & Nav
+      <div class="small-12 small-push-0 medium-9 medium-push-3 large-8 large-push-2 column content">
+          <div class="content-area">
+            Logo & Nav
+          </div>
       </div>
     </div>
 
-    <div class="row">
+    <div class="row sidebar">
         <div class="small-12 medium-3 large-2 columns">
-            Termine & Logos
+            <div class="termine">
+                <h6>Nächste FuckUp Night:</h6>
+
+                <div class="termin-item">
+                    <div class="date">04.12.2014</div>
+                    <div class="description">
+                        <a href="">Magdeburg | Elbtalent</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="partner">
+                <h6>Initiatoren:</h6>
+                <h6>Unterstützer:</h6>
+            </div>
         </div>
-        <div class="small-12 medium-9 large-8 columns">
-            Inhalt hier
+        <div class="small-12 medium-9 large-8 columns content">
+            <div class="content-area">
+                Inhalt hier
+            </div>
         </div>
         <div class="small-12 medium-12 large-2 columns">
             News
