--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                       <nav class="top-bar" data-topbar role="navigation">
                           <ul class="title-area">
                               <li class="name">
-                                  <h1><a href="#">Home</a></h1>
+                                  <h1 class="hide-for-medium-up"><a href="#">Home</a></h1>
                               </li>
                               <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                              <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+                              <li class="toggle-topbar menu-icon"><a href="#"><span>Menü</span></a></li>
                           </ul>
 
                           <section class="top-bar-section">
