--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <div class="small-12 medium-6 columns">
                       <nav class="top-bar" data-topbar role="navigation">
                           <ul class="title-area">
-                              <li class="name">
+                              <li class="name hide-for-medium-up">
                                   <h1><a href="#">Home</a></h1>
                               </li>
                               <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
@@ -29,9 +29,9 @@
                           <section class="top-bar-section">
                               <!-- Right Nav Section -->
                               <ul class="right">
-                                  <li class="active"><a href="#">Home</a></li>
-                                  <li class=""><a href="#">Impressum</a></li>
-                                  <li class=""><a href="#">Foo</a></li>
+                                  <li class="active hide-for-small-only expanded-item"><a href="#">Home</a></li>
+                                  <li class="expanded-item"><a href="#">Impressum</a></li>
+                                  <li class="expanded-item"><a href="#">Foo</a></li>
                                   <li class=""><a href="#">Bar</a></li>
                               </ul>
                           </section>
