--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
                       <span class="text-left">md.fuckupnight.de</span>
                   </div>
                   <div class="small-12 medium-6 columns">
+                      <!--<span class="failure-small hide-for-medium-up">Let's talk about failure</span>-->
                       <nav class="top-bar" data-topbar role="navigation">
                           <ul class="title-area">
                               <li class="name hide-for-medium-up">
                                   <h1><a href="#">Home</a></h1>
                               </li>
                               <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                              <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+                              <li class="toggle-topbar menu-icon"><a href="#"><span>Menü</span></a></li>
                           </ul>
 
                           <section class="top-bar-section">
                               <!-- Right Nav Section -->
                               <ul class="right">
                                   <li class="active hide-for-small-only expanded-item"><a href="#">Home</a></li>
-                                  <li class="expanded-item"><a href="#">Impressum</a></li>
-                                  <li class="expanded-item"><a href="#">Foo</a></li>
-                                  <li class=""><a href="#">Bar</a></li>
+                                  <li class=""><a href="#">Impressum</a></li>
                               </ul>
                           </section>
                       </nav>
+                      <span class="failure-big hide-for-small-only">Let's talk about failure</span>
                   </div>
               </div>
           </div>
