Added sample article

--- a/index.html
+++ b/index.html
@@ -62,7 +62,21 @@
         </div>
         <div class="small-12 medium-9 large-8 columns content">
             <div class="content-area">
-                Inhalt hier
+                <!-- Article -->
+                <div class="article">
+                    <h2>Was ist eine FuckUp Night</h2>
+                    <span>Du wurdest mal so richtig gefickt?<br/>Beruflich oder in der Selbstständigkeit?<br/></span>
+                    <span>FuckUp Nights sind eine monatliche Eventreihe, bei der die Leute erzählen, über die man normal nur negativ spricht: Gescheiterte Unternehmer, Selbstständige, gescheiterte Visionäre. Öffentlich spricht man lieber über Menschen die über Nacht zum Millionär wurden. Aber in Realität gehört das Scheitern zum Erfolg dazu. Beide sind untrennbar miteinander verbunden. Dabei erzählen die Referenten auf wenigen Folien auf lustige Art & Weise in maximal 10 Minuten ihre eigene Version der Geschichte und was sie daraus gelernt haben. FuckUps Nights laden dazu ein aus den Fehlern anderer zu lernen und neue Geschäftsideen aufzuschnappen.</span>
+                    <h3>Wie läuft das ab?</h3>
+                    <span>Bei jeder FuckUp Night, tragen 3 bis 4 Fuckupreneurs vor und teilen Ihre Geschichten des Scheiterns und beantworten dabei die wichtigsten Fragen:</span>
+                    <ul>
+                        <li>Worum ging es bei der Idee?</li>
+                        <li>Was ist schief gelaufen?</li>
+                        <li>Was haben die daraus gelernt?</li>
+                        <li>Was würden sie nun anders machen?</li>
+                    </ul>
+                    <span>Im Anschluss hat das Publikum die Möglichkeit Fragen zu stellen. Begleitet wird das Ganze durch eine angenehme Athomsphäre mit Snacks und Getränken.</span>
+                </div>
             </div>
         </div>
         <div class="small-12 medium-12 large-2 columns">
